@@ -91,3 +91,4 @@ User defined parametric curves can now be saved in ICC profiles.
 RGB profiles using same tone curves for several channels are storing now only one copy of the curve (saves space)
 Fixed a multithead bug on optimization (StageDEF)
 Fixed some 64 bit warnings on size_t to uint32 conversions
+update black point detection algorithm to reflect ICC changes
